--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@
     position: absolute;
     /* top: 10px;
     right: 30px; */
-    bottom: 140px;
-    left: 30px;
-    width: 180px;
-    height: 280px;
+    /* bottom: 160px; */
+    top: 50%;
+    left: 1.5%;
+    width: 15%;
+    height: 30%;
     background: black;
     color: white;
     padding: 15px;
@@ -39,7 +40,7 @@ h2 {
 
 h3 {
     font-family: "Montserrat";
-    font-size: 14px;
+    font-size: 1vw;
     color: white;
     font-weight: normal;
     margin: 0;
@@ -47,5 +48,5 @@ h3 {
 
 p {
     font-family: "Montserrat";
-    font-size: 11px;
+    font-size: 0.7vw;
 }
